[package]
name = "knet"
version = "0.3.1"
authors = ["Krys <roulin.alexandre@gmail.com>"]
edition = "2018"
keywords = ["network", "read_and_write", "server", "client"]
repository = "https://github.com/alexandre-roulin/knet"
description = "A server and a client that can write and read at the same time."
documentation = "https://docs.rs/knet/0.3.1/knet/"
license = "MIT"

[dependencies]
derive-knet =  "0.1.0"
simple_logger = "1.6.0"
log = { version = "0.4" }
futures = "0.3.0"
async-std = "1"
